test/error/DynamicObjectLeakInit.ci
public class Test
{
	public static bool Run()
	{
		// FIXME:
		Test p = new Test(); //ERROR: Dynamically allocated object must be assigned to a  reference
		return true;
	}
}
